# chatbot_project

./: .gitignore  chatbot_project.pptx  prompts.json  pyproject.toml  questions.txt  reproduce_graph_issue.py  updates.txt  verify_graph_rendering.py  verify_metadata.py  verify_prompt.py  ~$chatbot_project.pptx
scripts/data_loader/: api_load.py  available_api_top20_to_sqlite.py  build_summary_tables.py
scripts/rag/: benchmark_questions.md  cli_args.py  conditions.py  custom_retriever.py  evaluate_benchmarks.py  evaluation_results.jsonl  generate_benchmarks.py  graph_base.py  graph_supervisor_layout.py  helper.py  llm_config.yaml  node.py  preprocess.py  prompts.yaml  rag.py  state.py  streamlit_app.py  test_query_gen.py  test_retrieval.py
