[project]
name = "main-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "python-dotenv>=1.0.1",      # 1.2.7 -> 0.3.0으로 하향 조정
    "pandas>=2.0.0",         # pandas 3.0은 아직 프리뷰 단계일 수 있음
    "pypdf>=4.0.0",
    "requests>=2.31.0",
    "langchain<0.4.0",
    "langchain-community<0.4.0",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.1",
    "grandalf>=0.8",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.2",
    "langchain-chroma>=0.2.6",
    "rich>=14.3.2",
    "flashrank>=0.2.10",
    "rank-bm25>=0.2.2",
    "plotext>=5.3.2",
]
